# Triode

./: .gitignore  nanotest  pyproject.toml  requirements.txt
triode/: address_bar.py  app.py  generic_tab.py  main_window.py  settings.py  tab_manager.py  url_router.py
triode/browser/: backend.py  factory.py  qt_backend.py  tab.py  webkit_backend.py
triode/explorer/: actions.py  tab.py
triode/models/: route.py
triode/terminal/: command_wrapper.py  tab.py
