[tool.poetry]
name = "triode"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = {version="^6.6", optional=true}
PyGObject = {version="^3.42", optional=true}
cefpython3 = {version="^66.0", optional=true}

[tool.poetry.dev-dependencies]
mypy = "^1.5"
black = "^24.0"
ruff = "^0.18"
pytest = "^8.0"
